# superconscious

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GNUmakefile  Makefile  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  TRUST_SURFACE.yaml  pyproject.toml
docs/: PROGRAM_STATUS.md  README.md  SVF_VALIDATION_HISTORY_CONSUMER.md  adapter-boundary-matrix.md  architecture-falsification-v0.1.md  behavior-calculus.md  benchmark-taxonomy.md  downstream-integration-contracts.md  heller-consciousness-program.md  human-protection-layer-adoption.md  implementability-advanced-roadmap.md  implementability-steering-pilot.md  integration-ledger.md  integration-map.md  interpretability-harness-architecture.md  m1-0-controller-spec.md  m1-a-source-lock.md  m1-b-witness-cards.md  m1-c-causal-triad.md  m1-d-off-target-audit.md  m1-doctrine.md  m1-feature-selection.md  m1-implementability-certificate.md  m1-source-lock.md  m2-activation-cache.md  m2-implementability-certificate.md  m2-implementability-curve.md  m2-manifold-baseline.md  m2-metrics.md  m3-cross-layer-comparison.md  m3-layer-selection-rationale.md  m3-robustness-certificate.md  m3-transcoder-evidence.md  m5-outcome-template-mapping.md  m5-public-note-doctrine.md  memory-ontology.md  moat-claim.md  neurosymbolic-capability-role-matrix.md  neurosymbolic-cognition-position.md  neurosymbolic-failure-modes.md  (+6 more)
examples/: TRUST_SURFACE.lawful-learning.yaml  TRUST_SURFACE.node-commander.yaml  environment-state-memory-event.failed.json  environment-state-memory-event.observed.json  runtime-state-memory-event.allocated.json  (+2 more)
(+279 files in other folders)
